# eqrex

./: CHANGELOG.md  LICENSE  README.md  eqrex.cabal  notes  regcomp.hs  regexp_parser.hs  regexp_quickcheck.hs  test_func_pearl.hs  try_automata.hs
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.4/: eqrex-0.1.0.0-inplace.conf  package.cache
src/: DFAExtensions.hs  DFAOperations.hs  DFAWordSearch.hs  ParseRegExp.hs
